Fix overflow bug

--- a/global.css
+++ b/global.css
@@ -13,7 +13,7 @@ body {
   margin: 0;
   font-weight: 300;
   letter-spacing: 0.01em;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .navbar {
